--- a/scenario.toml
+++ b/scenario.toml
@@ -1,16 +1,31 @@
 [green_agent]
-agentbeats_id = ""
-env = { API_KEY = "${GITHUB_SECRET_NAME}", LOG_LEVEL = "INFO" }
+# https://agentbeats.dev/arthurlok/spyfall-green-agent
+agentbeats_id = "019ba893-27a9-7b91-8f74-f9ac62221aab"
+env = { OPENROUTER_API_KEY = "${OPENROUTER_API_KEY}" }
 
 [[participants]]
-agentbeats_id = ""
-name = "role_1_name"
-env = {}
+# https://agentbeats.dev/arthurlok/spyfall-purple-agent
+agentbeats_id = "019ba8d2-bee6-7e62-b278-7656be6a8d6b"
+name = "Player1"
+env = { OPENROUTER_API_KEY = "${OPENROUTER_API_KEY}" }
 
 [[participants]]
-agentbeats_id = ""
-name = "role_2_name"
-env = {}
+# https://agentbeats.dev/arthurlok/spyfall-purple-agent
+agentbeats_id = "019ba8d2-bee6-7e62-b278-7656be6a8d6b"
+name = "Player2"
+env = { OPENROUTER_API_KEY = "${OPENROUTER_API_KEY}" }
+
+[[participants]]
+# https://agentbeats.dev/arthurlok/spyfall-purple-agent
+agentbeats_id = "019ba8d2-bee6-7e62-b278-7656be6a8d6b"
+name = "Player3"
+env = { OPENROUTER_API_KEY = "${OPENROUTER_API_KEY}" }
+
+[[participants]]
+agentbeats_id = "019ba8d2-bee6-7e62-b278-7656be6a8d6b"
+name = "Player4"
+env = { OPENROUTER_API_KEY = "${OPENROUTER_API_KEY}" }
 
 [config]
-# Add your assessment config here
+location = "Museum"
+num_rounds = 3
